--- a/todo.txt
+++ b/todo.txt
@@ -1,26 +1,33 @@
+# Crate project
+
+Use below command to create a project:
+
+`npx create-react-app reactjs-todo`
+
 # Setup github repository
 
 Check current remote with below code:
 
-git remote -v
+`git remote -v`
 
 Add remote origin with below code:
 
-git remote add origin https://github.com/maheshwaghmare/reactjs-todo.git
+`git init`
+`git remote add origin https://github.com/maheshwaghmare/reactjs-todo.git`
 
 # Start Project
 
-npm start
+`npm start`
 
 # Install & Use Bootstrap 4
 
-- Install bootstrap with command:
+Install bootstrap with command:
 
-npm install react-bootstrap bootstrap
+`npm install react-bootstrap bootstrap`
 
 In index.js file add below line:
 
-import 'bootstrap/dist/css/bootstrap.min.css';
+`import 'bootstrap/dist/css/bootstrap.min.css';`
 
 Now, Use bootstrap classes row, col-md-4, table, h3 etc.
 
@@ -28,8 +35,8 @@ Now, Use bootstrap classes row, col-md-4, table, h3 etc.
 
 Install Github Pages with below code:
 
-npm install gh-pages --save-dev
+`npm install gh-pages --save-dev`
 
 Deply Github pages with below code:
 
-npm run deploy
+`npm run deploy`
